Set jvm heap config for mvn test in pom.xml